--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     def support_version = "27.0.2"
 
     compile("com.android.support:appcompat-v7:$support_version",
-            "com.android.support:design:$support_version")
+            "com.android.support:design:$support_version",
+            "com.squareup.picasso:picasso:2.5.2")
 
     // TODO Glide or Picasso
 }
